--- a/Source/AlephNote.App/WPF/Controls/TagCtrl/TagEditor2.xaml
+++ b/Source/AlephNote.App/WPF/Controls/TagCtrl/TagEditor2.xaml
@@ -6,9 +6,11 @@
 			 xmlns:self="clr-namespace:AlephNote.WPF.Controls"
 			 xmlns:conv="clr-namespace:AlephNote.WPF.Converter"
 			 xmlns:ext="clr-namespace:AlephNote.WPF.Extensions"
+			 xmlns:tki="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Input.Toolkit"
+			 xmlns:System="clr-namespace:System;assembly=mscorlib"
 			 mc:Ignorable="d">
 	<UserControl.Resources>
-		<ResourceDictionary xmlns:tkInput="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Input.Toolkit">
+		<ResourceDictionary>
 
 			<SolidColorBrush x:Key="HighlightBrush" Color="{ext:ThemeBinding 'window.tageditor.tag:highlight', Convert='ToColor'}" />
 
@@ -120,7 +122,7 @@
 				<Setter Property="Template">
 					<Setter.Value>
 						<ControlTemplate TargetType="{x:Type self:TokenizedTagItem}">
-							<Button x:Name="PART_TagButton" Content="{TemplateBinding Text}" Margin="0" Padding="0">
+							<Button x:Name="PART_TagButton" Content="{TemplateBinding Text}" Margin="0,0,0,1" Padding="0">
 								<Button.Style>
 									<Style TargetType="Button">
 										<Setter Property="Foreground" Value="{ext:ThemeBinding 'window.tageditor.tag:foreground', Proxy=True}" />
@@ -130,7 +132,7 @@
 									<ControlTemplate TargetType="Button">
 										<Border x:Name="PART_TagBorder" 
 												VerticalAlignment="Stretch" HorizontalAlignment="Stretch" 
-												BorderBrush="{ext:ThemeSlaveBinding {Binding ., Converter={conv:TagToBorderBrush}}}" 
+												BorderBrush="{ext:ThemeSlaveBinding {Binding Text, Converter={conv:TagToBorderBrush}}}" 
 												BorderThickness="1" 
 												Margin="{TemplateBinding Margin}" 
 												Padding="3,0,0,0" Background="{ext:ThemeBinding 'window.tageditor.tag:background'}" 
@@ -183,23 +185,34 @@
 						<Setter Property="Template">
 							<Setter.Value>
 								<ControlTemplate TargetType="{x:Type self:TokenizedTagItem}">
-									<tkInput:AutoCompleteBox x:Name="PART_InputBox"
+									<tki:AutoCompleteBox x:Name="PART_InputBox"
 													 Margin="0" Padding="0" VerticalAlignment="Center"
+													 Background="Transparent"
 													 Foreground="{ext:ThemeBinding 'window.tageditor.tag:foreground'}"
 													 Text="{Binding Text, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}" 
 													 ItemsSource="{Binding DropDownTags, RelativeSource={RelativeSource AncestorType={x:Type self:TokenizedTagControl}}}"
 													 BorderBrush="Transparent"
 													 BorderThickness="0"
 													 IsTextCompletionEnabled="False"
-													 FilterMode="ContainsOrdinal"
-													 />
+													 FilterMode="ContainsOrdinal">
+
+										<tki:AutoCompleteBox.ItemContainerStyle>
+											<Style TargetType="{x:Type ListBoxItem}">
+												<Setter Property="BorderBrush" Value="{ext:ThemeBinding 'window.tageditor.popup:bordercolor', Proxy=True}" />
+												<Setter Property="Foreground"  Value="{ext:ThemeBinding 'window.tageditor.popup:foreground',  Proxy=True}" />
+												<Setter Property="Background"  Value="{ext:ThemeBinding 'window.tageditor.popup:background',  Proxy=True}" />
+												<Setter Property="BorderThickness" Value="0,0,0,1" />
+											</Style>
+										</tki:AutoCompleteBox.ItemContainerStyle>
+
+									</tki:AutoCompleteBox>
 								</ControlTemplate>
 							</Setter.Value>
 						</Setter>
 					</Trigger>
 				</Style.Triggers>
 			</Style>
-
+			
 		</ResourceDictionary>
 	</UserControl.Resources>
 
