--- a/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
@@ -875,44 +875,56 @@
 				</Grid>
 			</TabItem>
 			<TabItem Header="Advanced">
-				<ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
-					<StackPanel Orientation="Vertical">
-						<Grid Margin="8">
-							<Grid.RowDefinitions>
-								<RowDefinition Height="Auto"/>
-								<RowDefinition Height="Auto"/>
-								<RowDefinition Height="Auto"/>
-								<RowDefinition Height="Auto"/>
-								<RowDefinition Height="Auto"/>
-								<RowDefinition Height="Auto"/>
-								<RowDefinition Height="Auto"/>
-								<RowDefinition/>
-							</Grid.RowDefinitions>
-							<Grid.ColumnDefinitions>
-								<ColumnDefinition Width="Auto" />
-								<ColumnDefinition Width="5" />
-								<ColumnDefinition Width="1*" />
-								<ColumnDefinition Width="Auto" />
-							</Grid.ColumnDefinitions>
+				<Grid>
+					<ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
+						<StackPanel Orientation="Vertical">
+							<Grid Margin="8">
+								<Grid.RowDefinitions>
+									<RowDefinition Height="Auto"/>
+									<RowDefinition Height="Auto"/>
+									<RowDefinition Height="Auto"/>
+									<RowDefinition Height="Auto"/>
+									<RowDefinition Height="Auto"/>
+									<RowDefinition Height="Auto"/>
+									<RowDefinition Height="Auto"/>
+									<RowDefinition/>
+								</Grid.RowDefinitions>
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition Width="Auto" />
+									<ColumnDefinition Width="5" />
+									<ColumnDefinition Width="1*" />
+									<ColumnDefinition Width="Auto" />
+								</Grid.ColumnDefinitions>
 
-							<TextBlock     Grid.Row="0" Grid.Column="0" Margin="3" VerticalAlignment="Center" Text="Support for international characters in filenames" />
-							<CheckBox      Grid.Row="0" Grid.Column="2" IsChecked="{Binding Settings.AllowAllLettersInFilename}" VerticalAlignment="Center"/>
-							<ctrl:PHelpBtn Grid.Row="0" Grid.Column="3" HelpProperty="AllowAllLettersInFilename" Margin="2,0" VerticalAlignment="Center" />
+								<TextBlock     Grid.Row="0" Grid.Column="0" Margin="3" VerticalAlignment="Center" Text="Support for international characters in filenames" />
+								<CheckBox      Grid.Row="0" Grid.Column="2" IsChecked="{Binding Settings.AllowAllLettersInFilename}" VerticalAlignment="Center"/>
+								<ctrl:PHelpBtn Grid.Row="0" Grid.Column="3" HelpProperty="AllowAllLettersInFilename" Margin="2,0" VerticalAlignment="Center" />
 
-							<TextBlock     Grid.Row="1" Grid.Column="0" Margin="3" VerticalAlignment="Center" Text="Allow all not explicitly forbidden characters in filenames" />
-							<CheckBox      Grid.Row="1" Grid.Column="2" IsChecked="{Binding Settings.AllowAllCharactersInFilename}" VerticalAlignment="Center"/>
-							<ctrl:PHelpBtn Grid.Row="1" Grid.Column="3" HelpProperty="AllowAllCharactersInFilename" Margin="2,0" VerticalAlignment="Center" />
+								<TextBlock     Grid.Row="1" Grid.Column="0" Margin="3" VerticalAlignment="Center" Text="Allow all not explicitly forbidden characters in filenames" />
+								<CheckBox      Grid.Row="1" Grid.Column="2" IsChecked="{Binding Settings.AllowAllCharactersInFilename}" VerticalAlignment="Center"/>
+								<ctrl:PHelpBtn Grid.Row="1" Grid.Column="3" HelpProperty="AllowAllCharactersInFilename" Margin="2,0" VerticalAlignment="Center" />
 
-							<TextBlock     Grid.Row="2" Grid.Column="0" Margin="3" VerticalAlignment="Center" Text="Only run a single instance of AlephNote in parallel" />
-							<CheckBox      Grid.Row="2" Grid.Column="2" IsChecked="{Binding Settings.SingleInstanceMode}" VerticalAlignment="Center"/>
-							<ctrl:PHelpBtn Grid.Row="2" Grid.Column="3" HelpProperty="SingleInstanceMode" Margin="2,0" VerticalAlignment="Center" />
+								<TextBlock     Grid.Row="2" Grid.Column="0" Margin="3" VerticalAlignment="Center" Text="Only run a single instance of AlephNote in parallel" />
+								<CheckBox      Grid.Row="2" Grid.Column="2" IsChecked="{Binding Settings.SingleInstanceMode}" VerticalAlignment="Center"/>
+								<ctrl:PHelpBtn Grid.Row="2" Grid.Column="3" HelpProperty="SingleInstanceMode" Margin="2,0" VerticalAlignment="Center" />
 
-							<TextBlock     Grid.Row="3" Grid.Column="0" Margin="3" VerticalAlignment="Center" Text="Use pre-release update channel" />
-							<CheckBox      Grid.Row="3" Grid.Column="2" IsChecked="{Binding Settings.UpdateToPrerelease}" VerticalAlignment="Center"/>
-							<ctrl:PHelpBtn Grid.Row="3" Grid.Column="3" HelpProperty="UpdateToPrerelease" Margin="2,0" VerticalAlignment="Center" />
-						</Grid>
-					</StackPanel>
-				</ScrollViewer>
+								<TextBlock     Grid.Row="3" Grid.Column="0" Margin="3" VerticalAlignment="Center" Text="Use pre-release update channel" />
+								<CheckBox      Grid.Row="3" Grid.Column="2" IsChecked="{Binding Settings.UpdateToPrerelease}" VerticalAlignment="Center"/>
+								<ctrl:PHelpBtn Grid.Row="3" Grid.Column="3" HelpProperty="UpdateToPrerelease" Margin="2,0" VerticalAlignment="Center" />
+							</Grid>
+						</StackPanel>
+					</ScrollViewer>
+					<Grid Background="White" Visibility="{Binding HideAdvancedVisibility}">
+						<GroupBox HorizontalAlignment="Center" VerticalAlignment="Center" Header="Warning" MaxWidth="350" Padding="15">
+
+							<StackPanel Orientation="Vertical">
+								<TextBlock TextWrapping="Wrap" Text="Changing these settings can be harmful to the stability, security and performance of this application. You should only continue if you are sure what you are doing" />
+								<Button Content="I'll be careful, I promise!" HorizontalAlignment="Center" Margin="0,15,0,0" Click="Button_Advanced_Click"  />
+							</StackPanel>
+
+						</GroupBox>
+					</Grid>
+				</Grid>
 			</TabItem>
 		</TabControl>
 
