--- a/Source/AlephNote.App/WPF/Controls/NotesViewFlat.xaml
+++ b/Source/AlephNote.App/WPF/Controls/NotesViewFlat.xaml
@@ -91,9 +91,8 @@
 								<RowDefinition Height="Auto" />
 							</Grid.RowDefinitions>
 
-							<Separator Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="5" 
-							           Background="{ext:ThemeBinding 'window.notesview.flat.vborder:foreground'}" 
-							           Foreground="{ext:ThemeBinding 'window.notesview.flat.vborder:background'}" 
+							<Rectangle Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="5" Height="2"
+							           Fill="{ext:ThemeBinding 'window.notesview.flat.vborder:background'}" 
 							           Margin="{ext:ThemeBinding     'window.notesview.flat.vborder:margin'}"  />
 
 							<Image     Grid.Row="1" Grid.Column="0" Source="/Resources/star.png" VerticalAlignment="Center" 
@@ -115,10 +114,9 @@
 								</TextBlock.LayoutTransform>
 							</TextBlock>
 
-							<Separator Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="5" 
-							           Background="{ext:ThemeBinding 'window.notesview.flat.vborder:foreground'}" 
-							           Foreground="{ext:ThemeBinding 'window.notesview.flat.vborder:background'}" 
-							           Margin="{ext:ThemeBinding     'window.notesview.flat.vborder:margin'}"  />
+							<Rectangle Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="5"  Height="2"
+							           Fill="{ext:ThemeBinding   'window.notesview.flat.vborder:background'}" 
+							           Margin="{ext:ThemeBinding 'window.notesview.flat.vborder:margin'}"  />
 						</Grid>
 					</DataTemplate>
 				</services:ConditionalDataTemplate>
