--- a/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
@@ -15,7 +15,7 @@
 		WindowStartupLocation="CenterOwner"
 		Closed="DialogWindow_Closed"
 		Icon="/Resources/IconMain.png"
-		Title="AlephNote - Configuration" MinHeight="300" MinWidth="300" Height="735" Width="585">
+		Title="AlephNote - Configuration" MinHeight="300" MinWidth="300" Height="735" Width="650">
 	<Window.Resources>
 		<converter:CreatePluginSettingsGrid x:Key="CreateGridConv" />
 	</Window.Resources>
@@ -647,13 +647,13 @@
 					</StackPanel>
 				</ScrollViewer>
 			</TabItem>
-			<TabItem Header="Backup">
+			<TabItem Header="Local sync">
 				<ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
 					<StackPanel Orientation="Vertical">
 						<GroupBox Padding="4">
 							<GroupBox.Header>
 								<StackPanel Orientation="Horizontal">
-									<TextBlock Text="Local filesystem repository" />
+									<TextBlock Text="Local filesystem synchronization" />
 									<ctrl:PHelpBtn HelpProperty="RawFolderRepo" Margin="6,0,0,0" VerticalAlignment="Center" Height="14" Width="14" />
 								</StackPanel>
 							</GroupBox.Header>
@@ -772,7 +772,7 @@
 					</StackPanel>
 				</ScrollViewer>
 			</TabItem>
-			<TabItem Header="Local sync">
+			<TabItem Header="Backup/History">
 				<ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
 					<StackPanel Orientation="Vertical">
 						<GroupBox Padding="4">
