--- a/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
@@ -701,6 +701,10 @@
 								<CheckBox      Grid.Row="6" Grid.Column="1" IsEnabled="{Binding Settings.UseRawFolderRepo}" IsChecked="{Binding Settings.RawFolderRepoUseFileWatcher}" Grid.ColumnSpan="2" VerticalAlignment="Center"/>
 								<ctrl:PHelpBtn Grid.Row="6" Grid.Column="3" HelpProperty="RawFolderRepoUseFileWatcher" Margin="2,0" VerticalAlignment="Center" />
 
+								<TextBlock     Grid.Row="7" Grid.Column="0" Margin="3" VerticalAlignment="Center" Text="Separate folders per account" />
+								<CheckBox      Grid.Row="7" Grid.Column="1" IsEnabled="{Binding Settings.UseRawFolderRepo}" IsChecked="{Binding Settings.RawFolderRepoSubfolders}" Grid.ColumnSpan="2" VerticalAlignment="Center"/>
+								<ctrl:PHelpBtn Grid.Row="7" Grid.Column="3" HelpProperty="RawFolderRepoSubfolders" Margin="2,0" VerticalAlignment="Center" />
+
 
 
 							</Grid>
