--- a/Source/AlephNote.App/WPF/Dialogs/ExceptionWindow.xaml
+++ b/Source/AlephNote.App/WPF/Dialogs/ExceptionWindow.xaml
@@ -1,4 +1,4 @@
-﻿<controls:DialogWindow x:Class="AlephNote.WPF.Windows.ExceptionDialog"
+﻿<controls:DialogWindow x:Class="AlephNote.WPF.Dialogs.ExceptionDialog"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:controls="clr-namespace:AlephNote.WPF.Controls"
