--- a/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
@@ -271,13 +271,14 @@
 									<Grid.RowDefinitions>
 										<RowDefinition Height="*" />
 										<RowDefinition Height="*" />
+										<RowDefinition Height="*" />
 									</Grid.RowDefinitions>
 
-									<CheckBox      Grid.Row="0" Grid.Column="0" Margin="2" Content="Remember scroll position per note"  IsChecked="{Binding Settings.RememberScroll}" />
+									<CheckBox      Grid.Row="0" Grid.Column="0" Margin="2" Content="Remember scroll position per note (permanent)"  IsChecked="{Binding Settings.RememberScroll}" />
 									<ctrl:PHelpBtn Grid.Row="0" Grid.Column="1" HelpProperty="RememberScroll" Margin="2,0" VerticalAlignment="Center" />
 
-									<CheckBox      Grid.Row="1" Grid.Column="0" Margin="2" Content="Automatically sort tags"  IsChecked="{Binding Settings.AutoSortTags}" />
-									<ctrl:PHelpBtn Grid.Row="1" Grid.Column="1" HelpProperty="AutoSortTags" Margin="2,0" VerticalAlignment="Center" />
+									<CheckBox      Grid.Row="1" Grid.Column="0" Margin="2" Content="Remember scroll position per note (per session)"  IsChecked="{Binding Settings.RememberScrollPerSession}" />
+									<ctrl:PHelpBtn Grid.Row="1" Grid.Column="1" HelpProperty="RememberScroll" Margin="2,0" VerticalAlignment="Center" />
 
 								</Grid>
 
@@ -289,12 +290,17 @@
 									<Grid.RowDefinitions>
 										<RowDefinition Height="*" />
 										<RowDefinition Height="*" />
+										<RowDefinition Height="*" />
 									</Grid.RowDefinitions>
 
 									<CheckBox      Grid.Row="0" Grid.Column="0" Margin="2" Content="Auto focus editor" IsChecked="{Binding Settings.AutofocusScintilla}" />
 									<ctrl:PHelpBtn Grid.Row="0" Grid.Column="1" HelpProperty="AutofocusScintilla" Margin="2,0" VerticalAlignment="Center" />
 
 									<CheckBox      Grid.Row="1" Grid.Column="0" Margin="2" Content="Show tag autocompletion"  IsChecked="{Binding Settings.TagAutocomplete}" />
+
+									<CheckBox      Grid.Row="2" Grid.Column="0" Margin="2" Content="Automatically sort tags"  IsChecked="{Binding Settings.AutoSortTags}" />
+									<ctrl:PHelpBtn Grid.Row="2" Grid.Column="1" HelpProperty="AutoSortTags" Margin="2,0" VerticalAlignment="Center" />
+
 								</Grid>
 							</Grid>
 						</GroupBox>
