--- a/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
@@ -15,7 +15,7 @@
 		WindowStartupLocation="CenterOwner"
 		Closed="DialogWindow_Closed"
 		Icon="/Resources/IconMain.png"
-		Title="AlephNote - Configuration" MinHeight="300" MinWidth="300" Height="735" Width="650">
+		Title="AlephNote - Configuration" MinHeight="300" MinWidth="300" Height="735" Width="700">
 	<Window.Resources>
 		<converter:CreatePluginSettingsGrid x:Key="CreateGridConv" />
 	</Window.Resources>
@@ -896,6 +896,79 @@
 						<ctrl:ShortcutBox  Grid.Row="2" Grid.Column="1" Margin="4" ShortcutKey="{Binding SelectedShortcut.Key}" ShortcutModifiers="{Binding SelectedShortcut.Modifiers}" />
 
 					</Grid>
+				</Grid>
+			</TabItem>
+			<TabItem Header="Snippets">
+				<Grid>
+					<Grid.RowDefinitions>
+						<RowDefinition Height="*" />
+						<RowDefinition Height="Auto" />
+						<RowDefinition Height="Auto" />
+					</Grid.RowDefinitions>
+					
+					<DataGrid Grid.Row="0" ItemsSource="{Binding SnippetList}" AutoGenerateColumns="False" IsReadOnly="True" SelectionMode="Single" SelectedItem="{Binding SelectedSnippet}">
+						<DataGrid.Columns>
+							<DataGridTemplateColumn Header="Identifier" Width="SizeToCells" MinWidth="100">
+								<DataGridTemplateColumn.CellTemplate>
+									<DataTemplate>
+										<TextBlock Text="{Binding ID, Mode=OneWay}" />
+									</DataTemplate>
+								</DataGridTemplateColumn.CellTemplate>
+							</DataGridTemplateColumn>
+							<DataGridTemplateColumn Header="Name" Width="SizeToCells" MinWidth="100">
+								<DataGridTemplateColumn.CellTemplate>
+									<DataTemplate>
+										<TextBlock Text="{Binding Name, Mode=OneWay}" />
+									</DataTemplate>
+								</DataGridTemplateColumn.CellTemplate>
+							</DataGridTemplateColumn>
+							<DataGridTemplateColumn Header="Value" Width="SizeToCells" MinWidth="100">
+								<DataGridTemplateColumn.CellTemplate>
+									<DataTemplate>
+										<TextBlock Text="{Binding Value, Mode=OneWay}" />
+									</DataTemplate>
+								</DataGridTemplateColumn.CellTemplate>
+							</DataGridTemplateColumn>
+						</DataGrid.Columns>
+					</DataGrid>
+					<StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
+						<TextBox Width="200" Margin="4" Text="{Binding NewSnippetID}" />
+						<Button Content="Add Snippet" MinWidth="100" Margin="4" Click="AddSnippet_Click" />
+					</StackPanel>
+					<GroupBox Grid.Row="2" Header="Snippet" Padding="4,4,4,0">
+						<Grid>
+							<Grid.ColumnDefinitions>
+								<ColumnDefinition Width="Auto"/>
+								<ColumnDefinition Width="*"/>
+								<ColumnDefinition Width="Auto"/>
+							</Grid.ColumnDefinitions>
+							<Grid.RowDefinitions>
+								<RowDefinition Height="Auto" />
+								<RowDefinition Height="Auto" />
+								<RowDefinition Height="Auto" />
+								<RowDefinition Height="Auto" />
+								<RowDefinition Height="Auto" />
+							</Grid.RowDefinitions>
+
+							<TextBlock Grid.Row="0" Grid.Column="0" Text="Identifier:" VerticalAlignment="Center" Margin="4,0" />
+							<TextBox   Grid.Row="0" Grid.Column="1" Text="{Binding SelectedSnippet.ID, FallbackValue=''}" Margin="2" IsReadOnly="true" />
+
+							<TextBlock Grid.Row="1" Grid.Column="0" Text="Name:" VerticalAlignment="Center" Margin="4,0" />
+							<TextBox   Grid.Row="1" Grid.Column="1" Text="{Binding SelectedSnippet.Name, FallbackValue=''}" Margin="2" IsReadOnly="{Binding SelectedSnippet, Converter={converter:IsNull}}" />
+
+							<TextBlock     Grid.Row="2" Grid.Column="0" Text="Value:" VerticalAlignment="Center" Margin="4,0" />
+							<TextBox       Grid.Row="2" Grid.Column="1" Text="{Binding SelectedSnippet.Value, FallbackValue=''}" KeyDown="UIElement_OnKeyDown" Margin="2" IsReadOnly="{Binding SelectedSnippet, Converter={converter:IsNull}}" />
+							<ctrl:PHelpBtn Grid.Row="2" Grid.Column="2" HelpProperty="SnippetHelp" Margin="2,0" VerticalAlignment="Center" />
+
+							<TextBlock Grid.Row="3" Grid.Column="0" Text="Preview:" VerticalAlignment="Center" Margin="4,0" />
+							<TextBox   Grid.Row="3" Grid.Column="1" Text="{Binding SelectedSnippet.Preview, FallbackValue=''}" Margin="2" IsReadOnly="True" IsReadOnlyCaretVisible="True" />
+
+							<StackPanel Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="2" >
+								<Button Content="Remove" MinWidth="60" IsEnabled="{Binding SelectedSnippet, Converter={converter:IsNotNull}}" Click="RemoveSnippet_Click" />
+							</StackPanel>
+
+						</Grid>
+					</GroupBox>
 				</Grid>
 			</TabItem>
 			<TabItem Header="Advanced">
